2024-07-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-emacs-keys-intro): list some key sequences
	for frames.
	(find-lean4-intro): many changes; made it work on Emacs28.

2024-07-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-eevgit): new function.

	* eev.el: bumped the version.

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024lean4of0".

2024-07-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-symbol-function): added a test for (fboundp
	'closurep).

	* eev-tlinks.el (find-package-vc-install-links): new function.

2024-07-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-closure-to-lambda, ee-symbol-function): new
	functions.
	(ee-defun-sexp-for, ee-shortdefp, find-efunctionpp): use
	`ee-symbol-function'.

2024-07-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lean4-intro): small changes.

2024-07-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): marked as obsolete.
	(find-newbrowser2-links): new function.

2024-07-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-dot-emacs-links): point to
	<http://anggtwu.net/2024-find-dot-emacs-links.html>.

	* eev-intro.el (find-dot-emacs-intro): point to
	<http://anggtwu.net/2024-find-dot-emacs-links.html>.

2024-07-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-melpa, ee-dot-emacs-lean4): new
	functions.

2024-07-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-dot-emacs-links, ee-dot-emacs-concat)
	(ee-dot-emacs-eev, ee-dot-emacs-mfms, ee-dot-emacs-angges)
	(ee-dot-emacs-maxima5470, ee-dot-emacs-epl): new functions.

	* eev-intro.el (find-windows-beginner-intro): small changes.

2024-07-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-debootstrap1): new argument: `container'.

2024-07-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024algpergs".
